--- a/zyra-client/package.json
+++ b/zyra-client/package.json
@@ -10,11 +10,12 @@
     },
     "dependencies": {
         "axios": "^1.7.0",
+        "firebase": "^12.10.0",
+        "lucide-react": "^0.454.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.28.0",
-        "recharts": "^2.15.0",
-        "lucide-react": "^0.454.0"
+        "recharts": "^2.15.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.0",
