--- a/zyra-server/package.json
+++ b/zyra-server/package.json
@@ -9,25 +9,26 @@
         "test": "jest --coverage"
     },
     "dependencies": {
-        "express": "^4.21.0",
-        "mongoose": "^8.9.0",
-        "dotenv": "^16.4.0",
-        "cors": "^2.8.5",
-        "jsonwebtoken": "^9.0.2",
-        "bcryptjs": "^2.4.3",
-        "joi": "^17.13.0",
-        "helmet": "^8.0.0",
-        "morgan": "^1.10.0",
-        "express-rate-limit": "^7.4.0",
-        "winston": "^3.15.0",
+        "@google/generative-ai": "^0.21.0",
         "axios": "^1.7.0",
-        "node-cron": "^3.0.3",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.0",
+        "express": "^4.21.0",
+        "express-rate-limit": "^7.4.0",
+        "firebase": "^12.10.0",
+        "helmet": "^8.0.0",
         "javascript-lp-solver": "^0.4.24",
-        "@google/generative-ai": "^0.21.0"
+        "joi": "^17.13.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.9.0",
+        "morgan": "^1.10.0",
+        "node-cron": "^3.0.3",
+        "winston": "^3.15.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.0",
         "jest": "^29.7.0",
+        "nodemon": "^3.1.0",
         "supertest": "^7.0.0"
     }
 }
